fix: link & header mobile spacings

--- a/styles/base.css
+++ b/styles/base.css
@@ -64,11 +64,10 @@ h3,
 h5,
 h6 {
   font-family: 'Poppins', sans-serif;
-  line-height: 1.9;
+  line-height: 1.3;
 }
 h1 {
   font-size: 3.8em;
-  line-height: 1.1em;
   color: var(--color-dark);
 }
 h2 {
